--- a/front_test/index.html
+++ b/front_test/index.html
@@ -1,146 +1,206 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Users and Restaurants</title>
+    <title>Restaurant Booking Admin Panel</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+        }
+        h2 {
+            margin-top: 30px;
+            color: #333;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+            background-color: #fff;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+            text-align: center;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        form {
+            background-color: #fff;
+            padding: 15px;
+            border: 1px solid #ddd;
+            margin-bottom: 20px;
+        }
+        label {
+            margin-right: 10px;
+        }
+        input, button {
+            padding: 8px;
+            margin-top: 5px;
+        }
+        button {
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <h1>Users</h1>
-    <ul id="users-list"></ul>
 
-    <h2>Create User</h2>
-    <form id="user-form">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <br>
-        <label for="role">Role:</label>
-        <select id="role" name="role" required>
-            <option value="user">User</option>
-            <option value="restaurant">Restaurant</option>
-        </select>
-        <br>
-        <button type="submit">Create User</button>
-    </form>
+    <div class="container">
+        <h1>🎯 Панель управления бронированием ресторанов</h1>
 
-    <h1>Restaurants</h1>
-    <ul id="restaurants-list"></ul>
+        <!-- Вывод данных -->
+        <h2>👥 Пользователи</h2>
+        <table id="users-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Имя</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
 
-    <h2>Create Restaurant</h2>
-    <form id="restaurant-form">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-        <br>
-        <label for="location">Location:</label>
-        <input type="text" id="location" name="location" required>
-        <br>
-        <label for="description">Description:</label>
-        <textarea id="description" name="description" required></textarea>
-        <br>
-        <label for="owner_id">Owner ID:</label>
-        <input type="number" id="owner_id" name="owner_id" required>
-        <br>
-        <button type="submit">Create Restaurant</button>
-    </form>
+        <h2>🍽️ Рестораны</h2>
+        <table id="restaurants-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Название</th>
+                    <th>Адрес</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+
+        <h2>🪑 Столики</h2>
+        <table id="tables-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Ресторан ID</th>
+                    <th>Места</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+
+        <h2>📅 Бронирования</h2>
+        <table id="bookings-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Пользователь ID</th>
+                    <th>Столик ID</th>
+                    <th>Дата и время</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+
+        <!-- Форма добавления пользователя -->
+        <h2>➕ Добавить пользователя</h2>
+        <form id="add-user-form">
+            <label>Имя: <input type="text" name="name" required></label>
+            <label>Email: <input type="email" name="email" required></label>
+            <button type="submit">Добавить пользователя</button>
+        </form>
+
+        <!-- Форма добавления ресторана -->
+        <h2>➕ Добавить ресторан</h2>
+        <form id="add-restaurant-form">
+            <label>Название: <input type="text" name="name" required></label>
+            <label>Адрес: <input type="text" name="address" required></label>
+            <button type="submit">Добавить ресторан</button>
+        </form>
+
+        <!-- Форма добавления столика -->
+        <h2>➕ Добавить столик</h2>
+        <form id="add-table-form">
+            <label>Ресторан ID: <input type="number" name="restaurant_id" required></label>
+            <label>Количество мест: <input type="number" name="seats" required></label>
+            <button type="submit">Добавить столик</button>
+        </form>
+
+        <!-- Форма бронирования -->
+        <h2>➕ Создать бронирование</h2>
+        <form id="add-booking-form">
+            <label>Пользователь ID: <input type="number" name="user_id" required></label>
+            <label>Столик ID: <input type="number" name="table_id" required></label>
+            <label>Дата и время: <input type="datetime-local" name="booking_time" required></label>
+            <button type="submit">Создать бронирование</button>
+        </form>
+    </div>
 
     <script>
-        // Fetch and display users
-        function fetchUsers() {
-            fetch('http://backend:8080/api/users')
-                .then(response => response.json())
-                .then(users => {
-                    const usersList = document.getElementById('users-list');
-                    usersList.innerHTML = '';
-                    users.forEach(user => {
-                        const li = document.createElement('li');
-                        li.textContent = `${user.username} (${user.email})`;
-                        usersList.appendChild(li);
-                    });
-                })
-                .catch(error => console.error('Error fetching users:', error));
+        // Функция для получения и отображения данных
+        async function fetchData(endpoint, tableId) {
+            const response = await fetch(`http://localhost:8080/api/${endpoint}`);
+            const data = await response.json();
+            const tableBody = document.querySelector(`#${tableId} tbody`);
+            tableBody.innerHTML = '';
+            
+            data.forEach(item => {
+                const row = document.createElement('tr');
+                Object.values(item).forEach(value => {
+                    const cell = document.createElement('td');
+                    cell.innerText = value;
+                    row.appendChild(cell);
+                });
+                tableBody.appendChild(row);
+            });
         }
 
-        // Fetch and display restaurants
-        function fetchRestaurants() {
-            fetch('http://backend:8080/api/restaurants')
-                .then(response => response.json())
-                .then(restaurants => {
-                    const restaurantsList = document.getElementById('restaurants-list');
-                    restaurantsList.innerHTML = '';
-                    restaurants.forEach(restaurant => {
-                        const li = document.createElement('li');
-                        li.textContent = `${restaurant.name} (${restaurant.location})`;
-                        restaurantsList.appendChild(li);
-                    });
-                })
-                .catch(error => console.error('Error fetching restaurants:', error));
+        // Функция для отправки формы
+        async function submitForm(endpoint, formId) {
+            const form = document.querySelector(`#${formId}`);
+            form.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const formData = new FormData(form);
+                const data = Object.fromEntries(formData.entries());
+
+                const response = await fetch(`http://localhost:8080/api/${endpoint}`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(data)
+                });
+
+                if (response.ok) {
+                    alert(`${endpoint} добавлено успешно!`);
+                    fetchData(endpoint, `${endpoint}-table`);
+                    form.reset();
+                } else {
+                    alert('Ошибка при добавлении данных.');
+                }
+            });
         }
 
-        // Handle user form submission
-        document.getElementById('user-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const userData = {
-                username: document.getElementById('username').value,
-                email: document.getElementById('email').value,
-                password: document.getElementById('password').value,
-                role: document.getElementById('role').value
-            };
+        // Получение данных при загрузке
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchData('users', 'users-table');
+            fetchData('restaurants', 'restaurants-table');
+            fetchData('tables', 'tables-table');
+            fetchData('bookings', 'bookings-table');
 
-            fetch('http://backend:8080/api/users', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(userData)
-            })
-            .then(response => {
-                if (response.ok) {
-                    fetchUsers(); // Refresh the user list
-                    alert('User created successfully!');
-                } else {
-                    alert('Failed to create user.');
-                }
-            })
-            .catch(error => console.error('Error creating user:', error));
+            submitForm('users', 'add-user-form');
+            submitForm('restaurants', 'add-restaurant-form');
+            submitForm('tables', 'add-table-form');
+            submitForm('bookings', 'add-booking-form');
         });
-
-        // Handle restaurant form submission
-        document.getElementById('restaurant-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const restaurantData = {
-                name: document.getElementById('name').value,
-                location: document.getElementById('location').value,
-                description: document.getElementById('description').value,
-                owner_id: parseInt(document.getElementById('owner_id').value, 10)
-            };
-
-            fetch('http://backend:8080/api/restaurants', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(restaurantData)
-            })
-            .then(response => {
-                if (response.ok) {
-                    fetchRestaurants(); // Refresh the restaurant list
-                    alert('Restaurant created successfully!');
-                } else {
-                    alert('Failed to create restaurant.');
-                }
-            })
-            .catch(error => console.error('Error creating restaurant:', error));
-        });
-
-        // Initial fetch
-        fetchUsers();
-        fetchRestaurants();
     </script>
+
 </body>
 </html>
