--- a/front_test/index.html
+++ b/front_test/index.html
@@ -2,26 +2,24 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Restaurant Booking Admin Panel</title>
+    <title>Управление пользователями</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
         }
         .container {
             width: 80%;
             margin: 20px auto;
         }
         h2 {
-            margin-top: 30px;
+            margin-top: 20px;
             color: #333;
         }
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-bottom: 20px;
+            margin-top: 20px;
             background-color: #fff;
         }
         th, td {
@@ -36,7 +34,7 @@
             background-color: #fff;
             padding: 15px;
             border: 1px solid #ddd;
-            margin-bottom: 20px;
+            margin-top: 20px;
         }
         label {
             margin-right: 10px;
@@ -58,149 +56,102 @@
 </head>
 <body>
 
-    <div class="container">
-        <h1>🎯 Панель управления бронированием ресторанов</h1>
+<div class="container">
+    <h1>👥 Управление пользователями</h1>
 
-        <!-- Вывод данных -->
-        <h2>👥 Пользователи</h2>
-        <table id="users-table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Имя</th>
-                    <th>Email</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+    <!-- Таблица с пользователями -->
+    <h2>📚 Все пользователи</h2>
+    <table id="users-table">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Имя пользователя</th>
+                <th>Email</th>
+                <th>Роль</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
-        <h2>🍽️ Рестораны</h2>
-        <table id="restaurants-table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Название</th>
-                    <th>Адрес</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+    <!-- Форма добавления нового пользователя -->
+    <h2>➕ Добавить пользователя</h2>
+    <form id="add-user-form">
+        <label>Имя пользователя: <input type="text" name="username" required></label><br>
+        <label>Email: <input type="email" name="email" required></label><br>
+        <label>Пароль: <input type="password" name="password" required></label><br>
+        <label>Роль: 
+            <select name="role">
+                <option value="user">Пользователь</option>
+                <option value="restaurant">Владелец ресторана</option>
+            </select>
+        </label><br>
+        <button type="submit">Добавить пользователя</button>
+    </form>
+</div>
 
-        <h2>🪑 Столики</h2>
-        <table id="tables-table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Ресторан ID</th>
-                    <th>Места</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-
-        <h2>📅 Бронирования</h2>
-        <table id="bookings-table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Пользователь ID</th>
-                    <th>Столик ID</th>
-                    <th>Дата и время</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-
-        <!-- Форма добавления пользователя -->
-        <h2>➕ Добавить пользователя</h2>
-        <form id="add-user-form">
-            <label>Имя: <input type="text" name="name" required></label>
-            <label>Email: <input type="email" name="email" required></label>
-            <button type="submit">Добавить пользователя</button>
-        </form>
-
-        <!-- Форма добавления ресторана -->
-        <h2>➕ Добавить ресторан</h2>
-        <form id="add-restaurant-form">
-            <label>Название: <input type="text" name="name" required></label>
-            <label>Адрес: <input type="text" name="address" required></label>
-            <button type="submit">Добавить ресторан</button>
-        </form>
-
-        <!-- Форма добавления столика -->
-        <h2>➕ Добавить столик</h2>
-        <form id="add-table-form">
-            <label>Ресторан ID: <input type="number" name="restaurant_id" required></label>
-            <label>Количество мест: <input type="number" name="seats" required></label>
-            <button type="submit">Добавить столик</button>
-        </form>
-
-        <!-- Форма бронирования -->
-        <h2>➕ Создать бронирование</h2>
-        <form id="add-booking-form">
-            <label>Пользователь ID: <input type="number" name="user_id" required></label>
-            <label>Столик ID: <input type="number" name="table_id" required></label>
-            <label>Дата и время: <input type="datetime-local" name="booking_time" required></label>
-            <button type="submit">Создать бронирование</button>
-        </form>
-    </div>
-
-    <script>
-        // Функция для получения и отображения данных
-        async function fetchData(endpoint, tableId) {
-            const response = await fetch(`http://localhost:8080/api/${endpoint}`);
+<script>
+    // Получение всех пользователей
+    async function fetchUsers() {
+        try {
+            const response = await fetch("http://localhost:8080/api/users");
+            if (!response.ok) {
+                throw new Error("Ошибка при получении данных.");
+            }
             const data = await response.json();
-            const tableBody = document.querySelector(`#${tableId} tbody`);
-            tableBody.innerHTML = '';
-            
-            data.forEach(item => {
-                const row = document.createElement('tr');
-                Object.values(item).forEach(value => {
-                    const cell = document.createElement('td');
-                    cell.innerText = value;
-                    row.appendChild(cell);
-                });
+            const tableBody = document.querySelector("#users-table tbody");
+            tableBody.innerHTML = "";
+
+            data.forEach(user => {
+                const row = document.createElement("tr");
+                row.innerHTML = `
+                    <td>${user.ID}</td>
+                    <td>${user.username || "—"}</td>
+                    <td>${user.email}</td>
+                    <td>${user.role || "—"}</td>
+                `;
                 tableBody.appendChild(row);
             });
+        } catch (error) {
+            console.error("Ошибка:", error);
+            alert("Не удалось загрузить данные!");
         }
+    }
 
-        // Функция для отправки формы
-        async function submitForm(endpoint, formId) {
-            const form = document.querySelector(`#${formId}`);
-            form.addEventListener('submit', async (e) => {
-                e.preventDefault();
-                const formData = new FormData(form);
-                const data = Object.fromEntries(formData.entries());
+    // Форма для добавления нового пользователя
+    document.querySelector("#add-user-form").addEventListener("submit", async (e) => {
+        e.preventDefault();
 
-                const response = await fetch(`http://localhost:8080/api/${endpoint}`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(data)
-                });
+        const formData = new FormData(e.target);
+        const data = {
+            username: formData.get("username"),
+            email: formData.get("email"),
+            password: formData.get("password"),
+            role: formData.get("role"),
+        };
 
-                if (response.ok) {
-                    alert(`${endpoint} добавлено успешно!`);
-                    fetchData(endpoint, `${endpoint}-table`);
-                    form.reset();
-                } else {
-                    alert('Ошибка при добавлении данных.');
-                }
+        try {
+            const response = await fetch("http://localhost:8080/api/users", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify(data),
             });
+
+            if (response.ok) {
+                alert("Пользователь успешно добавлен!");
+                e.target.reset();
+                fetchUsers(); // Обновить список пользователей
+            } else {
+                throw new Error("Ошибка при добавлении пользователя.");
+            }
+        } catch (error) {
+            console.error("Ошибка:", error);
+            alert("Не удалось добавить пользователя.");
         }
+    });
 
-        // Получение данных при загрузке
-        document.addEventListener('DOMContentLoaded', () => {
-            fetchData('users', 'users-table');
-            fetchData('restaurants', 'restaurants-table');
-            fetchData('tables', 'tables-table');
-            fetchData('bookings', 'bookings-table');
-
-            submitForm('users', 'add-user-form');
-            submitForm('restaurants', 'add-restaurant-form');
-            submitForm('tables', 'add-table-form');
-            submitForm('bookings', 'add-booking-form');
-        });
-    </script>
+    // Загрузка данных при старте
+    document.addEventListener("DOMContentLoaded", fetchUsers);
+</script>
 
 </body>
 </html>
