--- a/front_test/html/restaurants.html
+++ b/front_test/html/restaurants.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Главная</title>
+    <title>Рестораны</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,8 +25,8 @@
       defer
     ></script>
 
-    <link rel="stylesheet" href="css/index.css" />
-    <script src="js/index.js" defer></script>
+    <link rel="stylesheet" href="../css/index.css" />
+    <script src="../js/index.js" defer></script>
   </head>
   <body>
     <div class="container-fluid">
@@ -34,8 +34,8 @@
       <div class="row lg-12 d-none d-sm-flex" id="topNavBar">
         <div class="col-3">
           <div class="row">
-            <div class="col-6 text-center topNavBarItem selected">
-              <a href="#">Главная</a>
+            <div class="col-6 text-center topNavBarItem">
+              <a href="../index.html">Главная</a>
             </div>
             <div class="col-6 text-center topNavBarItem">
               <a href="/html/profile.html">Профиль</a>
@@ -49,10 +49,10 @@
               <a href="/html/booking.html">Бронирования</a>
             </div>
             <div
-              class="col-6 text-center topNavBarItem"
+              class="col-6 text-center topNavBarItem selected"
               style="border-right: 1px solid black"
             >
-              <a href="/html/restaurants.html">Рестораны</a>
+              <a href="#">Рестораны</a>
             </div>
           </div>
         </div>
@@ -108,28 +108,136 @@
                   class="col-10 offset-1"
                   style="border-bottom: 1px black solid"
                 >
-                  <h1 class="pt-5" style="font-size: 60px">
-                    Сервис бронирования
-                  </h1>
+                  <h1 class="pt-5" style="font-size: 60px">LuxeBouquets®</h1>
                   <p class="pt-5 pb-5" style="font-size: 20px">
-                    Добро пожаловать на наш сайт — ваш надежный помощник в мире
-                    гастрономических удовольствий! Мы предлагаем удобный и
-                    быстрый способ бронирования столиков в лучших ресторанах и
-                    кафе вашего города. Независимо от того, планируете ли вы
-                    романтический ужин, деловую встречу или встречу с друзьями,
-                    у нас есть идеальное место для вас.
+                    Откройте для себя уникальные букеты и подарки для любого
+                    случая: Доставляйте радость с помощью нашей Онлайн-службы
+                    доставки цветов
                   </p>
                 </div>
               </div>
             </div>
-            <div class="row mt-5 mb-5">
-              <div class="col-10 offset-1">
+            <div class="row mt-5">
+              <div class="col-5 offset-1" style="border-right: 1px black solid">
                 <img src="/img/0.webp" />
+              </div>
+              <div class="col-5 d-flex align-items-end">
+                <p class="mb-0">
+                  Испытайте радость дарения с нашей современной флористической
+                  студией. Закажите онлайн и отправьте свежие цветы, растения и
+                  подарки уже сегодня.
+                </p>
               </div>
             </div>
           </div>
           <!-- Правый блок -->
-          <div class="col-lg-6 col-sm-12" id="rests"></div>
+          <div class="col-lg-6 col-sm-12">
+            <div class="row">
+              <!-- Текст -->
+              <div class="col-6 mainSectionItem">
+                <div class="row h-75">
+                  <div
+                    class="col-12 d-flex justify-content-center align-items-center"
+                  >
+                    <span class="text-center">Свежие цветы</span>
+                  </div>
+                </div>
+                <div
+                  class="row text-center h-25 d-flex justify-content-center align-items-center"
+                >
+                  <a href="#">В магазин</a>
+                </div>
+              </div>
+              <!-- Изображение -->
+              <div class="col-6 mainSectionItem">
+                <img src="/img/1.webp" alt="Цветы в вазе" />
+              </div>
+            </div>
+            <div class="row">
+              <!-- Изображение -->
+              <div class="col-6 mainSectionItem">
+                <img src="/img/2.webp" alt="Цветы в вазе" />
+              </div>
+              <!-- Текст -->
+              <div class="col-6 mainSectionItem">
+                <div class="row h-75">
+                  <div
+                    class="col-12 d-flex justify-content-center align-items-center"
+                  >
+                    <span class="text-center">Сухоцветы</span>
+                  </div>
+                </div>
+                <div
+                  class="row text-center h-25 d-flex justify-content-center align-items-center"
+                >
+                  <a href="#">В магазин</a>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <!-- Текст -->
+              <div class="col-6 mainSectionItem">
+                <div class="row h-75">
+                  <div
+                    class="col-12 d-flex justify-content-center align-items-center"
+                  >
+                    <span class="text-center">Горшочные цветы</span>
+                  </div>
+                </div>
+                <div
+                  class="row text-center h-25 d-flex justify-content-center align-items-center"
+                >
+                  <a href="#">В магазин</a>
+                </div>
+              </div>
+              <!-- Изображение -->
+              <div class="col-6 mainSectionItem">
+                <img src="/img/3.webp" alt="Цветы в вазе" />
+              </div>
+            </div>
+            <div class="row">
+              <!-- Изображение -->
+              <div class="col-6 mainSectionItem">
+                <img src="/img/4.webp" alt="Цветы в вазе" />
+              </div>
+              <!-- Текст -->
+              <div class="col-6 mainSectionItem">
+                <div class="row h-75">
+                  <div
+                    class="col-12 d-flex justify-content-center align-items-center"
+                  >
+                    <span class="text-center">Ароматические свечи</span>
+                  </div>
+                </div>
+                <div
+                  class="row text-center h-25 d-flex justify-content-center align-items-center"
+                >
+                  <a href="#">В магазин</a>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <!-- Текст -->
+              <div class="col-6 mainSectionItem">
+                <div class="row h-75">
+                  <div
+                    class="col-12 d-flex justify-content-center align-items-center text-center"
+                  >
+                    <span class="text-center">Комнатные ароматизаторы</span>
+                  </div>
+                </div>
+                <div
+                  class="row text-center h-25 d-flex justify-content-center align-items-center"
+                >
+                  <a href="#">В магазин</a>
+                </div>
+              </div>
+              <!-- Изображение -->
+              <div class="col-6 mainSectionItem">
+                <img src="/img/5.webp" alt="Цветы в вазе" />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- О нас -->
